# BBLoraE5

./: .gitignore  README.md  config.yaml  fetch.yaml  install.sh  install.yaml  lora  loramake  main  main.py  makefile  plots.ipynb  pyproject.toml  requirements.txt  rl.conf  sample.json  testHTTPServer.py  uploader.service  uploader.yaml
csvpipe/: Makefile  rlsamples.csv
csvpipe/src/: csvpipe.c
csvstream/: .gitignore  Makefile  README.md
csvstream/src/: csvstream.c
dirtviz_uploader/: http.py  lora.py  main.py  rocketlogger.py  teros12.py  test_rocketlogger.py  test_teros12.py
include/: dproc.h  ipc.h  lora.h
libipc/: Makefile
libipc/examples/: client.c
lora/: Makefile  lora  makefile
lora/include/: client.h
lora/samples/: rocketlogger.csv
lora/src/: client.c  lora.c  lora.h  main.c  uart.c
old/: .gitignore  install.sh  rl.conf
old/csvstream/: Makefile
old/libipc/: .gitmodules
old/libipc/src/: generic.c  server.h
old/lora/: Makefile  README.md
old/scripts/: logger
pipestream/: Makefile
rl_client/: makefile  rlcli
rl_client/include/: server.h
rl_client/src/: tclient.c
rocketlogger/: Makefile  lora  makefile
rocketlogger/include/: lora.h
rocketlogger/src/: generic.c  lora.c  main.c  main.c.save  server.c  teroslogger.c
samples/: rocketlogger.csv  teros.csv
scripts/: logger  logger.service  logger.sh
src/: dproc.c  generic.c  lora.c  main.c  server.c
teros/: lipc  makefile
teros/src/: tclient.c
teros_client/: makefile  tcli
teros_client/include/: generic.h
teros_client/src/: generic.c  ipc.c  server.c  tclient.c
(+2 files in other folders)
